--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Héctor Valdes M.</a></h1>
-					<p>"Hola mundo"</p>
+					<p>"Hola mundo :)"</p>
 				</header>
 				<nav id="nav">
 					<ul>
