--- a/index.html
+++ b/index.html
@@ -80,31 +80,17 @@
 							<section id="three">
 								<div class="container">
 									<h3>Algunos trabajos</h3>
-									<p>Te muestro un poco lo que he desarrollado ,tambien te dejo el link a mí pagína de 
-										<a href="https://github.com/Mushroom0047">Github</a>.
+									<p>Te muestro un poco lo que he desarrollado.
 									</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://hvgamestudio.itch.io/" class="image"><img src="images/logo cuadrado.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Videojuegos</h4>
+												<p>En mí página de <a href="https://hvgamestudio.itch.io/"><b>itch.io</b></a> estan publicados los pequeños que desarrolle con la aplicación <b>Game Marker Studio 2</b>
+												son simples pero me permitieron adrentarme en el mundo del desarrollo.</p>
 											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
+										</article>										
 									</div>
 								</div>
 							</section>
