--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://twitter.com/Mushroom0047" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/hectorvaldesm/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/Mushroom0047" class="icon brands fa-github"><span class="label">Github</span></a></li>		
+						<li><a href="https://twitter.com/Mushroom0047" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/hectorvaldesm/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/Mushroom0047" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>		
 					</ul>
 				</footer>
 			</section>
@@ -82,10 +82,10 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="https://hvgamestudio.itch.io/" class="image"><img class="turnimg" src="images/logo cuadrado.jpg" alt="" /></a>
+											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img class="turnimg" src="images/logo cuadrado.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Videojuegos</h4>
-												<p>En mí página de <a href="https://hvgamestudio.itch.io/"><b>itch.io</b></a> estan publicados los pequeños que desarrolle con la aplicación <b>Game Marker Studio 2</b>
+												<p>En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños que desarrolle con la aplicación <b>Game Marker Studio 2</b>
 												son simples pero me permitieron adrentarme en el mundo del desarrollo.</p>
 											</div>
 										</article>										
@@ -98,7 +98,7 @@
 								<div class="container">
 									<h3>Contactame</h3>
 									<p>Si tienes un proyecto en mente y quieres saber más sobre mi trabajo enviame un mensaje.</p>
-									<form method="post" action="#">
+									<form method="post" action="contacto.php">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
