--- a/index.html
+++ b/index.html
@@ -50,11 +50,19 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Saludos</h2>
-										<p>Soy un estudiante Analista programador motivado e inventivo con
-											excelentes dotes de multitarea y criterio preciso.</p>
+										<h2>Saludos</h2>										
 									</header>
-									<p></p>
+									<div class="saludos">
+										<img class="photoprof" src="images/portada.jpg" alt="">									
+										<p>Soy un Estudiante motivado e inventivo,										
+											bien organizado y preciso, excelentes
+											dotes de multitarea y criterio
+											preciso.
+											Actualmente me encuentro en el último
+											semestre de la carrera Analista
+											programador en Inacap.
+											 </p>
+									</div>
 								</div>
 							</section>
 
