--- a/index.html
+++ b/index.html
@@ -52,15 +52,14 @@
 									<header class="major">
 										<h2>Saludos</h2>										
 									</header>
-									<div class="saludos">
+									<div class="features">
 										<img class="photoprof" src="images/portada.jpg" alt="">									
-										<p>Soy un Estudiante motivado e inventivo,										
-											bien organizado y preciso, excelentes
+										<p>Soy un Estudiante de programación motivado e hábil,										
+											bien organizado y preciso, con excelentes
 											dotes de multitarea y criterio
 											preciso.
 											Actualmente me encuentro en el último
-											semestre de la carrera Analista
-											programador en Inacap.
+											semestre de la carrera en Inacap.
 											 </p>
 									</div>
 								</div>
