arreglado parrafo incorrecto

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									</header>
 									<div class="features">
 										<img class="photoprof" src="images/portada.jpg" alt="">									
-										<p>Soy un Estudiante de programación motivado e hábil,										
+										<p class="parrafo">Soy un Estudiante de programación motivado e hábil,										
 											bien organizado y preciso, con excelentes
 											dotes de multitarea y criterio
 											preciso.
@@ -75,7 +75,7 @@
 										<li class="icon solid fa-database">Base de datos SQL </li>
 										<li class="icon solid fa-code">HTML/CSS</li>
 										<li class="icon solid fa-mobile">APP Android</li>
-										<li class="icon solid fa-project-diagram">control de versiones git</li>
+										<li class="icon solid fa-project-diagram">Control de versiones git</li>
 										<li class="icon solid fa-gamepad">Game Maker Studio 2 (Desarrollo de videojuegos)</li>
 									</ul>
 								</div>
@@ -104,7 +104,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contactame</h3>
-									<p>Si tienes un proyecto en mente y quieres saber más sobre mi trabajo enviame un mensaje.</p>
+									<p>Si quieres saber más sobre mi trabajo enviame un mensaje.</p>
 									<form method="post" action="contacto.php">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" required/></div>
