arreglo de foto principal y parrafos

--- a/index.html
+++ b/index.html
@@ -52,15 +52,19 @@
 									<header class="major">
 										<h2>Saludos</h2>										
 									</header>
-									<div class="features">
-										<img class="photoprof" src="images/portada.jpg" alt="">									
-										<p class="parrafo">Soy un Estudiante de programación motivado e hábil,										
-											bien organizado y preciso, con excelentes
-											dotes de multitarea y criterio
-											preciso.
-											Actualmente me encuentro en el último
-											semestre de la carrera en Inacap.
-											 </p>
+									<div class="features">																												
+										<article>
+											<img class="image" id="phtoprof" src="images/portada.jpg" alt="">	
+												<div class="inner">
+													<p class="parrafo">Soy un Estudiante de programación motivado e hábil,										
+														bien organizado y preciso, con excelentes
+														dotes de multitarea y criterio
+														preciso.
+														Actualmente me encuentro en el último
+														semestre de la carrera en Inacap.
+													</p>
+												</div>												
+										</article>									
 									</div>
 								</div>
 							</section>
@@ -92,7 +96,7 @@
 											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img class="turnimg" src="images/logo cuadrado.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Videojuegos</h4>
-												<p>En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños que desarrolle con la aplicación <b>Game Marker Studio 2</b>
+												<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños que desarrolle con la aplicación <b>Game Marker Studio 2</b>
 												son simples pero me permitieron adrentarme en el mundo del desarrollo.</p>
 											</div>
 										</article>										
