Correccion de texto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Héctor Valdes M.</a></h1>
+					<h1 id="logo"><a href="#">Héctor Valdés M.</a></h1>
 					<p>"Hola mundo :)"</p>
 				</header>
 				<nav id="nav">
@@ -25,7 +25,7 @@
 						<li><a href="#one" class="active">Sobre mí</a></li>
 						<li><a href="#two">Lenguajes que conozco</a></li>
 						<li><a href="#three">Proyectos</a></li>
-						<li><a href="#four">Hablemos</a></li>
+						<li><a href="#four">Contacto</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -46,7 +46,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/banner.jpg" alt="Analista - Desarrollador - programador - diseño web" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -54,14 +54,14 @@
 									</header>
 									<div class="features">																												
 										<article>
-											<img class="image" id="phtoprof" src="images/portada.jpg" alt="">	
+											<img class="image" id="phtoprof" src="images/portada.jpg" alt="Analista - Desarrollador - Programador - Developer">	
 												<div class="inner">
-													<p class="parrafo">Soy un Estudiante de programación motivado e hábil,										
+													<p class="parrafo">Soy un Estudiante de programación motivado,										
 														bien organizado y preciso, con excelentes
 														dotes de multitarea y criterio
 														preciso.
 														Actualmente me encuentro en el último
-														semestre de la carrera en Inacap.
+														semestre de la carrera analista programdor en Inacap.
 													</p>
 												</div>												
 										</article>									
@@ -93,11 +93,11 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img class="turnimg" src="images/logo cuadrado.jpg" alt="" /></a>
+											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img class="turnimg" src="images/logo cuadrado.jpg" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
 											<div class="inner">
 												<h4>Videojuegos</h4>
-												<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños que desarrolle con la aplicación <b>Game Marker Studio 2</b>
-												son simples pero me permitieron adrentarme en el mundo del desarrollo.</p>
+												<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños juegos que desarrolle con la aplicación <b>Game Marker Studio 2</b>
+												son simples pero me permitieron adrentarme mucho más en el mundo del desarrollo.</p>
 											</div>
 										</article>										
 									</div>
@@ -114,7 +114,7 @@
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" required/></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required/></div>
 											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" required/></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="mensaje" rows="6" required></textarea></div>
+											<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6" required></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
 													<li><input type="submit" class="primary" value="Enviar" name="enviar" /></li>
