--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />		
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/logo cuadrado.jpg">
 		<!--reCaptcha-->
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
@@ -21,7 +22,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Héctor Valdés M.</a></h1>
-					<p>"Hola mundo :)"</p>
+					<p>Hola mundo :)</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -96,11 +97,20 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img class="turnimg" src="images/logo cuadrado.jpg" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
+											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img src="images/itchio.png" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
 											<div class="inner">
 												<h4>Videojuegos</h4>
 												<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños juegos que desarrolle con la aplicación <b>Game Marker Studio 2</b>
 												son simples pero me permitieron adrentarme mucho más en el mundo del desarrollo.</p>
+											</div>
+										</article>										
+									</div>
+									<div class="features">
+										<article>
+											<a href="https://linna-dem.netlify.app" target="_blank"  class="image"><img src="images/Sitio Web.png" alt="Diseño - Web -portafolio - ilustración - ilustradora" /></a>
+											<div class="inner">
+												<h4>Portafolio</h4>
+												<p class="parrafo">Portafolio de la maravillosa ilustradora <a href="https://linna-dem.netlify.app">Linna-dem.</a></p>
 											</div>
 										</article>										
 									</div>
