--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/png" href="images/logo cuadrado.jpg">
 		<!--reCaptcha-->
-		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+		<!--script src="https://www.google.com/recaptcha/api.js" async defer></script-->
 
 	</head>
 	<body class="is-preload">
@@ -135,7 +135,7 @@
 												</ul>
 											</div>
 										</div>
-										<div class="g-recaptcha" data-sitekey="6Le_BFcaAAAAAIRzlB2IXgeUTnMlFJkZsuREz1w9"></div>
+										<!--div class="g-recaptcha" data-sitekey="6Le_BFcaAAAAAIRzlB2IXgeUTnMlFJkZsuREz1w9"></div-->
 									</form>
 								</div>
 							</section>
