Corrección de logo y órtografia

--- a/index.html
+++ b/index.html
@@ -5,161 +5,188 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Héctor Valdés M.</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />		
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" href="images/logo cuadrado.jpg">
-		<!--reCaptcha-->
-		<!--script src="https://www.google.com/recaptcha/api.js" async defer></script-->
 
-	</head>
-	<body class="is-preload">
+<head>
+	<title>Héctor Valdés M.</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="title" content="Analista programador">
+	<meta name="description" content="Desarrollador fronted y programador">
+	<meta name="keywords" content="Developer, Web, design, programador, analista, desarrollador, creador, página web.">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="Spanish">
+	<meta name="author" content="Héctor Valdés">
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Héctor Valdés M.</a></h1>
-					<p>Hola mundo :)</p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">Sobre mí</a></li>
-						<li><a href="#two">Lenguajes que conozco</a></li>
-						<li><a href="#three">Proyectos</a></li>
-						<li><a href="#four">Contacto</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://twitter.com/Mushroom0047" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/hectorvaldesm/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/Mushroom0047" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>		
-					</ul>
-				</footer>
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" type="image/png" href="images/logo cuadrado.png">
+	<!--reCaptcha-->
+	<!--script src="https://www.google.com/recaptcha/api.js" async defer></script-->
+
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<section id="header">
+		<header>
+			<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+			<h1 id="logo"><a href="#">Héctor Valdés M.</a></h1>
+			<p>Hola mundo :)</p>
+		</header>
+		<nav id="nav">
+			<ul>
+				<li><a href="#one" class="active">Sobre mí</a></li>
+				<li><a href="#two">Conocimientos</a></li>
+				<li><a href="#three">Proyectos</a></li>
+				<li><a href="#four">Contacto</a></li>
+			</ul>
+		</nav>
+		<footer>
+			<ul class="icons">
+				<li><a href="https://twitter.com/Mushroom0047" target="_blank" class="icon brands fa-twitter"><span
+							class="label">Twitter</span></a></li>
+				<li><a href="https://www.instagram.com/hectorvaldesm/" target="_blank"
+						class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/Mushroom0047" target="_blank" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+			</ul>
+		</footer>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- One -->
+			<section id="one">
+				<div class="image main" data-position="center">
+					<img src="images/banner.jpg" alt="Analista - Desarrollador - programador - diseño web" />
+				</div>
+				<div class="container">
+					<header class="major">
+						<h2>Saludos</h2>
+					</header>
+					<div class="features">
+						<article>
+							<img class="image" id="phtoprof" src="images/portada.jpg"
+								alt="Analista - Desarrollador - Programador - Developer">
+							<div class="inner">
+								<p class="parrafo">Soy un Estudiante de programación motivado,
+									bien organizado y preciso, con excelentes
+									dotes de multitarea y criterio
+									preciso.
+									Actualmente me encuentro en el último
+									semestre de la carrera analista programador en Inacap.
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+			<!-- Two -->
+			<section id="two">
+				<div class="container">
+					<h3>Conocimientos</h3>
+					<p>Constantemente estoy aprendiendo de manera autodidacta, pero hasta ahora estas son las
+						tecnologías que conozco.</p>
+					<ul class="feature-icons">
+						<li class="icon solid fa-laptop-code">JAVA</li>
+						<li class="icon solid fa-database">Base de datos SQL </li>
+						<li class="icon solid fa-code">HTML/CSS</li>
+						<li class="icon solid fa-mobile">APP Android</li>
+						<li class="icon solid fa-project-diagram">Control de versiones git</li>
+						<li class="icon solid fa-gamepad">Game Maker Studio 2 (Desarrollo de videojuegos)</li>
+					</ul>
+				</div>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="one">
-								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="Analista - Desarrollador - programador - diseño web" />
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>Saludos</h2>										
-									</header>
-									<div class="features">																												
-										<article>
-											<img class="image" id="phtoprof" src="images/portada.jpg" alt="Analista - Desarrollador - Programador - Developer">	
-												<div class="inner">
-													<p class="parrafo">Soy un Estudiante de programación motivado,										
-														bien organizado y preciso, con excelentes
-														dotes de multitarea y criterio
-														preciso.
-														Actualmente me encuentro en el último
-														semestre de la carrera analista programdor en Inacap.
-													</p>
-												</div>												
-										</article>									
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3>Conocimientos</h3>
-									<p>Constantemente estoy aprendiendo de manera autodidacta, pero hasta ahora estas son las tecnologias que conzco</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-laptop-code">JAVA</li>
-										<li class="icon solid fa-database">Base de datos SQL </li>
-										<li class="icon solid fa-code">HTML/CSS</li>
-										<li class="icon solid fa-mobile">APP Android</li>
-										<li class="icon solid fa-project-diagram">Control de versiones git</li>
-										<li class="icon solid fa-gamepad">Game Maker Studio 2 (Desarrollo de videojuegos)</li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Algunos trabajos</h3>
-									<p>Te muestro un poco lo que he desarrollado.
-									</p>
-									<div class="features">
-										<article>
-											<a href="https://hvgamestudio.itch.io/" target="_blank"  class="image"><img src="images/itchio.png" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
-											<div class="inner">
-												<h4>Videojuegos</h4>
-												<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/" target="_blank" ><b>itch.io</b></a> estan publicados los pequeños juegos que desarrolle con la aplicación <b>Game Marker Studio 2</b>
-												son simples pero me permitieron adrentarme mucho más en el mundo del desarrollo.</p>
-											</div>
-										</article>										
-									</div>
-									<div class="features">
-										<article>
-											<a href="https://linna-dem.netlify.app" target="_blank"  class="image"><img src="images/Sitio Web.png" alt="Diseño - Web -portafolio - ilustración - ilustradora" /></a>
-											<div class="inner">
-												<h4>Portafolio</h4>
-												<p class="parrafo">Portafolio de la maravillosa ilustradora <a href="https://linna-dem.netlify.app">Linna-dem.</a></p>
-											</div>
-										</article>										
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contactame</h3>
-									<p>Si quieres saber más sobre mi trabajo enviame un mensaje.</p>
-									<form method="post" action="contacto.php">									
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" required/></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required/></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" required/></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6" required></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Enviar" name="enviar" /></li>
-													<li><input type="reset" value="Limpiar" /></li>
-												</ul>
-											</div>
-										</div>
-										<!--div class="g-recaptcha" data-sitekey="6Le_BFcaAAAAAIRzlB2IXgeUTnMlFJkZsuREz1w9"></div-->
-									</form>
-								</div>
-							</section>
+			<!-- Three -->
+			<section id="three">
+				<div class="container">
+					<h3>Algunos trabajos</h3>
+					<p>Te muestro un poco lo que he desarrollado.
+					</p>
+					<div class="features">
+						<article>
+							<a href="https://hvgamestudio.itch.io/" target="_blank" class="image"><img
+									src="images/itchio.png" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
+							<div class="inner">
+								<h4>Videojuegos</h4>
+								<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/"
+										target="_blank"><b>itch.io</b></a> están publicados los pequeños juegos que
+									desarrolle con la aplicación <b>Game Marker Studio 2</b>
+									son simples pero me permitieron adentrarme mucho más en el mundo del desarrollo.</p>
+							</div>
+						</article>
 					</div>
+					<div class="features">
+						<article>
+							<a href="https://linna-dem.netlify.app" target="_blank" class="image"><img
+									src="images/Sitio Web.png"
+									alt="Diseño - Web -portafolio - ilustración - ilustradora" /></a>
+							<div class="inner">
+								<h4>Portafolio</h4>
+								<p class="parrafo">Portafolio de la maravillosa ilustradora <a
+										href="https://linna-dem.netlify.app">Linna-dem.</a></p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; HectorValdesM. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+			<!-- Four -->
+			<section id="four">
+				<div class="container">
+					<h3>Contactame</h3>
+					<p>Si quieres saber más sobre mi trabajo enviame un mensaje.</p>
+					<form method="post" action="contacto.php">
+						<div class="row gtr-uniform">
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name"
+									placeholder="Nombre" required /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email"
+									placeholder="Email" required /></div>
+							<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto"
+									required /></div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"
+									required></textarea></div>
+							<div class="col-12">
+								<ul class="actions">
+									<li><input type="submit" class="primary" value="Enviar" name="enviar" /></li>
+									<li><input type="reset" value="Limpiar" /></li>
+								</ul>
+							</div>
 						</div>
-					</section>
+						<!--div class="g-recaptcha" data-sitekey="6Le_BFcaAAAAAIRzlB2IXgeUTnMlFJkZsuREz1w9"></div-->
+					</form>
+				</div>
+			</section>
+		</div>
 
+		<!-- Footer -->
+		<section id="footer">
+			<div class="container">
+				<ul class="copyright">
+					<li>&copy; HectorValdesM. All rights reserved.</li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
