Se agregan proyectos y se modifica el css

--- a/index.html
+++ b/index.html
@@ -135,9 +135,30 @@
 							</div>
 						</article>
 					</div>
+					<div class="features">
+						<article>
+							<img  class="imageApp" src="images/img001.jpg"
+								alt="Diseño - APP -Android - Aplicación - Frases" /></a>
+							<div class="inner">
+								<h4>APP Frases motivacionales</h4>
+								<p class="parrafo">APP para android que genera frases motivacionales al azar. Creada con
+									Android Studio y Java.</p>
+							</div>
+						</article>
+					</div>
+					<div class="features">
+						<article>
+							<img class="imageApp" src="images/img002.jpg"
+								alt="Diseño - APP -Android - Aplicación" /></a>
+							<div class="inner">
+								<h4>APP estado ánimo</h4>
+								<p class="parrafo">Aplicación personalizada usada para registrar el estado de ánimo y cansancio según tabla comparativa, los datos son almacenados en una Base de datos. Creada con Android Studio y Java.</p>
+							</div>
+						</article>
+					</div>
 				</div>
 			</section>
-
+			
 			<!-- Four -->
 			<section id="four">
 				<div class="container">
