Reduccion de imagenes y correccion de textos

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 							<img class="image" id="phtoprof" src="images/portada.jpg"
 								alt="Analista - Desarrollador - Programador - Developer">
 							<div class="inner">
-								<p class="parrafo">Soy un Estudiante de programación motivado,
-									bien organizado y preciso, con excelentes
+								<p class="parrafo">Hola, Me llamo <b>Héctor</b> y soy un Estudiante de programación motivado,
+									bien organizado y autodidacta, con excelentes
 									dotes de multitarea y criterio
 									preciso.
 									Actualmente me encuentro en el último
@@ -97,7 +97,8 @@
 						<li class="icon solid fa-laptop-code">JAVA</li>
 						<li class="icon solid fa-database">Base de datos SQL </li>
 						<li class="icon solid fa-code">HTML/CSS</li>
-						<li class="icon solid fa-mobile">APP Android</li>
+						<li class="icon solid fa-laptop-code">JavaScript</li>
+						<li class="icon solid fa-mobile">Android Studio</li>
 						<li class="icon solid fa-project-diagram">Control de versiones git</li>
 						<li class="icon solid fa-gamepad">Game Maker Studio 2 (Desarrollo de videojuegos)</li>
 					</ul>
@@ -113,7 +114,7 @@
 					<div class="features">
 						<article>
 							<a href="https://hvgamestudio.itch.io/" target="_blank" class="image"><img
-									src="images/itchio.png" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
+									src="images/itchio.jpg" alt="Diseño - Videojuegos - Indie - Desarrollador " /></a>
 							<div class="inner">
 								<h4>Videojuegos</h4>
 								<p class="parrafo">En mí página de <a href="https://hvgamestudio.itch.io/"
@@ -126,7 +127,7 @@
 					<div class="features">
 						<article>
 							<a href="https://linna-dem.netlify.app" target="_blank" class="image"><img
-									src="images/Sitio Web.png"
+									src="images/Sitio Web.jpg"
 									alt="Diseño - Web -portafolio - ilustración - ilustradora" /></a>
 							<div class="inner">
 								<h4>Portafolio</h4>
@@ -134,28 +135,7 @@
 										href="https://linna-dem.netlify.app">Linna-dem.</a></p>
 							</div>
 						</article>
-					</div>
-					<div class="features">
-						<article>
-							<img  class="imageApp" src="images/img001.jpg"
-								alt="Diseño - APP -Android - Aplicación - Frases" /></a>
-							<div class="inner">
-								<h4>APP Frases motivacionales</h4>
-								<p class="parrafo">APP para android que genera frases motivacionales al azar. Creada con
-									Android Studio y Java.</p>
-							</div>
-						</article>
-					</div>
-					<div class="features">
-						<article>
-							<img class="imageApp" src="images/img002.jpg"
-								alt="Diseño - APP -Android - Aplicación" /></a>
-							<div class="inner">
-								<h4>APP estado ánimo</h4>
-								<p class="parrafo">Aplicación personalizada usada para registrar el estado de ánimo y cansancio según tabla comparativa, los datos son almacenados en una Base de datos. Creada con Android Studio y Java.</p>
-							</div>
-						</article>
-					</div>
+					</div>				
 				</div>
 			</section>
 			
